--- a/index.html
+++ b/index.html
@@ -4,91 +4,121 @@
         <link rel="stylesheet" type="text/css" href="estilos.css">
     </head>
 	<body >
-		<div class="page-header">
-			<section class="main-header">
-			  		<img src="#" alt="Logo" class="logo" width="400" height="200"><br>
-			  		<a class="menu-btn menu-btn-header" href="#">Home</a>
-					<a class="menu-btn menu-btn-header" href="#">Anime list</a>
-					<a class="menu-btn menu-btn-header" href="#">Cartoon list</a>
-					<a class="menu-btn menu-btn-header" href="#">MOBILE</a>
-					<a class="menu-btn menu-btn-header" href="#">Report/Request</a>
-					<a class="menu-btn menu-btn-header" href="#">Forum</a>
-					<a class="menu-btn menu-btn-header" href="#">Read Manga</a>
-					<a class="menu-btn menu-btn-header" href="#">Watch Drama</a>
-		  	</section>
-
-		  	<div class="main-ad1"></div>
-
-		  	<div class="main-ad2"></div>
-
-		</div>
-
 		<div class="page-content">
-
-		 	<section class="main-content">
-		 		<div class="block">
-		    		<div class="block-title">Latest update</div><div class="arrow-down"></div>
-		    		aaaaa
-		    	</div>
-		 		
-				<a class="menu-btn" href="#">New & Hot</a>
-				<a class="menu-btn" href="#">Recent additions</a>
-				<a class="menu-btn" href="#">Most popular</a>
-				<div class="block">
-					<div class="row">
-						<img src="#" alt="Article image" class="article--image" width="80" height="90">
-						<a class="link link-default" href="#" role="button">Title</a>
-						<div class="article-rank"><img src="#" alt="1" width="20" height="20"></div>
-						<br><br>
-						Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
-						Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
+			<section class="main-header">
+				<img src="#" alt="Logo" class="logo" width="400" height="200"><br>
+		  		<a class="menu-btn menu-btn-header" href="#">Menu1</a>
+				<a class="menu-btn menu-btn-header" href="#">Menu2</a>
+				<a class="menu-btn menu-btn-header" href="#">Menu3</a>
+				<a class="menu-btn menu-btn-header" href="#">Menu4</a>
+				<a class="menu-btn menu-btn-header" href="#">Menu5</a>
+				<a class="menu-btn menu-btn-header" href="#">Menu6</a>
+				<a class="menu-btn menu-btn-header" href="#">Menu7</a>
+				<a class="menu-btn menu-btn-header" href="#">Menu8</a>
+				<br>
+				<div class="submenu">submenu</div>
+		  	</section>
+			<div class="main-content">
+			 	<section class="main-content-section">
+			 		<div class="block">
+			    		<div class="block-title">
+			    			Title
+			    		</div>
+			    		<div class="arrow-down"></div>
+			    		content
+			    	</div>	
+					<a class="menu-btn" href="#">Menu1</a>
+					<a class="menu-btn" href="#">Menu2</a>
+					<a class="menu-btn" href="#">Menu3</a>
+					<div class="block">
+						<div class="row">
+							<img src="#" alt="Article image" class="article--image" width="80" height="90">
+							<a class="link link-default" href="#" role="button">Title</a>
+							<div class="article-rank"><img src="#" alt="1" width="20" height="20"></div>
+							<br><br>
+							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
+							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
+						</div>
+						<div class="row">
+							<img src="#" alt="Article image" class="article--image" width="80" height="90">
+							<a class="link link-default" href="#" role="button">Title</a>
+							<div class="article-rank"><img src="#" alt="2" width="20" height="20"></div>
+							<br><br>
+							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
+							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
+						</div>
+						<div class="row">
+							<img src="#" alt="Article image" class="article--image" width="80" height="90">
+							<a class="link link-default" href="#" role="button">Title</a>
+							<div class="article-rank"><img src="#" alt="2" width="20" height="20"></div>
+							<br><br>
+							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
+							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
+						</div>
+						<div class="row">
+							<img src="#" alt="Article image" class="article--image" width="80" height="90">
+							<a class="link link-default" href="#" role="button">Title</a>
+							<div class="article-rank"><img src="#" alt="2" width="20" height="20"></div>
+							<br><br>
+							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
+							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
+						</div>
+						<div class="row">
+							<img src="#" alt="Article image" class="article--image" width="80" height="90">
+							<a class="link link-default" href="#" role="button">Title</a>
+							<div class="article-rank"><img src="#" alt="2" width="20" height="20"></div>
+							<br><br>
+							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
+							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
+						</div>
+						<div class="row">
+							<img src="#" alt="Article image" class="article--image" width="80" height="90">
+							<a class="link link-default" href="#" role="button">Title</a>
+							<div class="article-rank"><img src="#" alt="2" width="20" height="20"></div>
+							<br><br>
+							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
+							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
+						</div>
+						<div class="row block-footer"><a class="link link-default" href="#" role="button">More...</a></div>
 					</div>
-					<div class="row">
-						<img src="#" alt="Article image" class="article--image" width="80" height="90">
-						<a class="link link-default" href="#" role="button">Title</a>
-						<div class="article-rank"><img src="#" alt="2" width="20" height="20"></div>
-						<br><br>
-						Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
-						Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
-					</div>
-					<div class="row block-footer"><a class="link link-default" href="#" role="button">More...</a></div>
-				</div>
-		 	</section>
-		  	<aside class="main-sidebar">
-		  		<div class="block">
-		    		<div class="block-title">Announcement</div><div class="arrow-down"></div>
-		    		aaaaa
-		    	</div>
-		    	<div class="block">
-		    		<div class="block-title">Remove ads</div><div class="arrow-down"></div>
-		    		aaaaa
-		    	</div>
-		    	<div class="block">
-		    		<div class="block-title">Ongoing series</div><div class="arrow-down"></div>
-		    		aaaaa
-		    	</div>
-		    	<div class="block">
-		    		<div class="block-title">Like me please ^^</div><div class="arrow-down"></div>
-		    		aaaaa
-		    	</div>
-		    	<div class="block">
-		    		<div class="block-title">Latest update</div><div class="arrow-down"></div>
-		    		<img src="#" alt="Img" class="article--image" width="14" height="14"><a class="link link-default" href="#" role="button">Name</a> <a class="link link--alt" href="#" role="button">Episode ###</a><br>
-		    		<img src="#" alt="Img" class="article--image" width="14" height="14"><a class="link link-default" href="#" role="button">Name</a> <a class="link link--alt" href="#" role="button">Episode ###</a><br>
-		    		<img src="#" alt="Img" class="article--image" width="14" height="14"><a class="link link-default" href="#" role="button">Name</a> <a class="link link--alt" href="#" role="button">Episode ###</a><br>
-		    		<img src="#" alt="Img" class="article--image" width="14" height="14"><a class="link link-default" href="#" role="button">Name</a> <a class="link link--alt" href="#" role="button">Episode ###</a>
-		    		<div class="row block-footer"><a class="link link-default" href="#" role="button">More...</a></div>
-		    	</div>
-		  	</aside>
+		 		</section>
 
-			<div class="main-ad1"></div>
+		  		<aside class="main-content-sidebar">
+		  			<div class="block">
+		    			<div class="block-title">Title</div><div class="arrow-down"></div>
+		    			content
+		    		</div>
+		    		<div class="block">
+		    			<div class="block-title">Title</div><div class="arrow-down"></div>
+		    			content
+		    		</div>
+		    		<div class="block">
+		    			<div class="block-title">Title</div><div class="arrow-down"></div>
+		    			content
+		    		</div>
+		    		<div class="block">
+		    			<div class="block-title">Title</div><div class="arrow-down"></div>
+		    			content
+		    		</div>
+		    		<div class="block">
+		    			<div class="block-title">Title</div><div class="arrow-down"></div>
+		    			<img src="#" alt="Img" class="article--image" width="14" height="14"><a class="link link-default" href="#" role="button">Name</a> <a class="link link--alt" href="#" role="button">Episode ###</a><br>
+		    			<img src="#" alt="Img" class="article--image" width="14" height="14"><a class="link link-default" href="#" role="button">Name</a> <a class="link link--alt" href="#" role="button">Episode ###</a><br>
+		    			<img src="#" alt="Img" class="article--image" width="14" height="14"><a class="link link-default" href="#" role="button">Name</a> <a class="link link--alt" href="#" role="button">Episode ###</a><br>
+		    			<img src="#" alt="Img" class="article--image" width="14" height="14"><a class="link link-default" href="#" role="button">Name</a> <a class="link link--alt" href="#" role="button">Episode ###</a>
+		    			<div class="row block-footer"><a class="link link-default" href="#" role="button">More...</a></div>
+		    		</div>
+		  		</aside>
+			</div>
 
-		  	<div class="main-ad2"></div>
-		  
+			<section class="main-footer">
+				Copyrights and trademarks
+			</section>
 		</div>
 
-		<section class="page-footer">
-			Copyrights and trademarks
-		</section>
+		<div class="page-ad1"></div>
+
+		<div class="page-ad2"></div>
+
 	</body>
 </html>
