--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<body >
 		<div class="page-content">
 			<section class="main-header">
-				<img src="#" alt="Logo" class="logo" width="400" height="200"><br>
+				<img src="#" alt="Logo" class="logo" width="400" height="200">
+				<br>
 		  		<a class="menu-btn menu-btn-header" href="#">Menu1</a>
 				<a class="menu-btn menu-btn-header" href="#">Menu2</a>
 				<a class="menu-btn menu-btn-header" href="#">Menu3</a>
@@ -33,49 +34,49 @@
 					<div class="block">
 						<div class="row">
 							<img src="#" alt="Article image" class="article--image" width="80" height="90">
-							<a class="link link-default" href="#" role="button">Title</a>
+							<a class="link link-default" href="#" role="button"><h2>Title</h2></a>
 							<div class="article-rank"><img src="#" alt="1" width="20" height="20"></div>
-							<br><br>
+							<br>
 							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
 							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
 						</div>
 						<div class="row">
 							<img src="#" alt="Article image" class="article--image" width="80" height="90">
-							<a class="link link-default" href="#" role="button">Title</a>
+							<a class="link link-default" href="#" role="button"><h2>Title</h2></a>
 							<div class="article-rank"><img src="#" alt="2" width="20" height="20"></div>
-							<br><br>
+							<br>
 							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
 							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
 						</div>
 						<div class="row">
 							<img src="#" alt="Article image" class="article--image" width="80" height="90">
-							<a class="link link-default" href="#" role="button">Title</a>
+							<a class="link link-default" href="#" role="button"><h2>Title</h2></a>
 							<div class="article-rank"><img src="#" alt="2" width="20" height="20"></div>
-							<br><br>
+							<br>
 							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
 							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
 						</div>
 						<div class="row">
 							<img src="#" alt="Article image" class="article--image" width="80" height="90">
-							<a class="link link-default" href="#" role="button">Title</a>
+							<a class="link link-default" href="#" role="button"><h2>Title</h2></a>
 							<div class="article-rank"><img src="#" alt="2" width="20" height="20"></div>
-							<br><br>
+							<br>
 							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
 							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
 						</div>
 						<div class="row">
 							<img src="#" alt="Article image" class="article--image" width="80" height="90">
-							<a class="link link-default" href="#" role="button">Title</a>
+							<a class="link link-default" href="#" role="button"><h2>Title</h2></a>
 							<div class="article-rank"><img src="#" alt="2" width="20" height="20"></div>
-							<br><br>
+							<br>
 							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
 							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
 						</div>
 						<div class="row">
 							<img src="#" alt="Article image" class="article--image" width="80" height="90">
-							<a class="link link-default" href="#" role="button">Title</a>
+							<a class="link link-default" href="#" role="button"><h2>Title</h2></a>
 							<div class="article-rank"><img src="#" alt="2" width="20" height="20"></div>
-							<br><br>
+							<br>
 							Genres: <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a>, <a class="link link-default" href="#" role="button">Genre</a><br><br>
 							Latest: <a class="link link-default" href="#" role="button">Episode ###</a>
 						</div>
@@ -83,7 +84,7 @@
 					</div>
 		 		</section>
 
-		  		<aside class="main-content-sidebar">
+		  		<nav class="main-content-sidebar">
 		  			<div class="block">
 		    			<div class="block-title">Title</div><div class="arrow-down"></div>
 		    			content
@@ -108,7 +109,7 @@
 		    			<img src="#" alt="Img" class="article--image" width="14" height="14"><a class="link link-default" href="#" role="button">Name</a> <a class="link link--alt" href="#" role="button">Episode ###</a>
 		    			<div class="row block-footer"><a class="link link-default" href="#" role="button">More...</a></div>
 		    		</div>
-		  		</aside>
+		  		</nav>
 			</div>
 
 			<section class="main-footer">
